# dph-mg-grobner

./: ProjectHome.md  TODO  grobnerpar.cabal  launchscript
Math/: GrobnerPar.hs
Math/GrobnerPar/: Buchberger.hs  Monomial.hs  Polynomial.hs
Math/GrobnerPar/Run/: Spec.hs
examples/: CommutingMatrices.hs  Cyclic.hs  First.hs
notes/: Jobs File
sage/: commutingMatrices.py  genericMultigrade.py  mgGrobner.py  mpi1.py  mpi2.py  mpiGpsql.py  mpiGrobner.py  sage-and-mysql-on-ubuntu.sh  serialGrobner.py  timing.sh  timingtest.py
